Добавлена автонумерация таблицы

--- a/Kurs/MainWindow.xaml
+++ b/Kurs/MainWindow.xaml
@@ -52,6 +52,7 @@
 
             <DataGrid Name="listBox"  Grid.Column="1" 
                   AutoGenerateColumns="False"
+                      LoadingRow="dGrid_LoadingRow" 
                       DataContext="{Binding ElementName=cBoxWork, Path=SelectedItem}"
                       RowHeaderWidth="50"
                   DataGrid.IsReadOnly ="True"
