--- a/Kurs/Dialogs/EditProduct.xaml
+++ b/Kurs/Dialogs/EditProduct.xaml
@@ -5,38 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kurs.Dialogs"
         mc:Ignorable="d"
-        Title="Редактирование товаров" Height="450" Width="800">
+        Title="Редактирование товаров" Height="338" Width="584.8" Background="#FFCBEBE7" FontSize="16" FontWeight="Bold">
     <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>            
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Content="Название товара" Grid.Row="0"/>
+        <Label Content="Название товара" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="textBoxName" Margin="25 15"
                  Text="{Binding Path=Name}"
-                 Grid.Row="0" Grid.Column="1"/>        
-        <Label Content="Количество" Grid.Row="1"/>
+                 Grid.Row="0" Grid.Column="1"/>
+        <Label Content="Количество" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="textBoxQuantity" Margin="25 15"
                  Text="{Binding Path=Quantity}"
                  Grid.Row="1" Grid.Column="1"/>
-        <Label Content="Категория" Grid.Row="2"/>
+        <Label Content="Категория" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox x:Name="textBoxCategory" Margin="25 15"
                  Text="{Binding Path=Category}"
-                 Grid.Row="2" Grid.Column="1"/>        
-        <Label Content="Дата поступления" Grid.Row="3"/>
+                 Grid.Row="2" Grid.Column="1"/>
+        <Label Content="Дата поступления" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <DatePicker x:Name="dpProduct" Grid.Row="3" Margin="25 15"
                     SelectedDate="{Binding Path=DateOfArrival}"
-                    Grid.Column="1"/>        
+                    Grid.Column="1"/>
         <Button x:Name="ButtonOK" Content="OK" Grid.Row="4" Grid.Column="0" 
-                Margin="25 15" Click="ButtonOK_Click"/>
+                Margin="25 15" Click="ButtonOK_Click" Background="#FF4A8C83"/>
         <Button x:Name="ButtonCancel" Content="Cancel" Grid.Row="4" Grid.Column="1" 
-                Margin="25 15" Click="ButtonCancel_Click"/>
+                Margin="25 15" Click="ButtonCancel_Click" Background="#FF4A8C83"/>
     </Grid>
 </Window>
